--- a/application/html/first.phtml
+++ b/application/html/first.phtml
@@ -1,11 +1,11 @@
 <br>
 <div class="description">
-    <h1>ты в пустой комнте </h1> в ней нет ничего крое обшрпнх кирпичных стен, двух дверей и тебя.
+    <h2>ты в пустой комнте </h2> в ней нет ничего крое обшрпнх кирпичных стен, двух дверей и тебя.
 </div>
 
 <div class="choises">
     <form>
-        <input class="choise" type="button" value="Левая дверь" onClick='location.href="/here"'>
-        <input class="choise" type="button" value="Правая дверь" onClick='location.href="/there"'>
+        <a class="btn btn-primary btn-lg btn-block" href="/here" role="button">Левая комната</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/there" role="button">Правая дверь</a>
     </form>
 </div>
