--- a/application/html/here.phtml
+++ b/application/html/here.phtml
@@ -1,12 +1,12 @@
 <br>
 <div class="description">
-    <h1>Ты входишь в команту которая была слева от первой <br></h1>
-    <p>В комнате так же пусто. Из кмнаты ведет проход направо.
+    <h2>Ты входишь в команту которая была слева от первой <br></h2>
+    <p class="text-center">В комнате так же пусто. Из кмнаты ведет проход направо.
 </div>
 
 <div class="choises">
     <form>
-        <input class="choise" type="button" value="Правая комната" onClick='location.href="/there"'>
-        <input class="choise" type="button" value="Первая комната" onClick='location.href="/first"'>
+        <a class="btn btn-primary btn-lg btn-block" href="/there" role="button">Правая комната</a>
+        <a class="btn btn-primary btn-lg btn-block" href="/first" role="button">Первая комната</a>
     </form>
 </div>
