--- a/application/html/main.phtml
+++ b/application/html/main.phtml
@@ -1,11 +1,11 @@
 <br>
 <div class="description">
-    <h1> Вся наша жизнь </h1>
+    <h2> Вся наша жизнь </h2>
 </div>
-<center> 
+
 <div class="choises">
     <form>
-       <input class="choise" type="button" value="начать игру" onClick='location.href="/first"'>
+        <a class="btn btn-primary btn-lg btn-block" href="/first" role="button">Начать</a>
     </form>
 </div>
-</center>
+
